Fixed spacing issue on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,12 @@ body {
     padding-top:3em;
 }
 
+@media only screen and (max-width: 660px) {
+    .main.container {
+        padding-top:0em;
+    }
+}
+
 .ui.footer.segment {
 	margin: 5em 0em 0em;
     padding: 5em 0em;
